; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_server.c_connectToServer.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/pg_upgrade/extr_server.c_connectToServer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CONNECTION_OK = common dso_local global i64 0, align 8
@PG_REPORT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"connection to database failed: %s\00", align 1
@.str.1 = private unnamed_addr constant [18 x i8] c"Failure, exiting\0A\00", align 1
@ALWAYS_SECURE_SEARCH_PATH_SQL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @connectToServer(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32* @get_db_conn(i32* %6, i8* %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = icmp eq i32* %9, null
  br i1 %10, label %16, label %11

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = call i64 @PQstatus(i32* %12)
  %14 = load i64, i64* @CONNECTION_OK, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %30

16:                                               ; preds = %11, %2
  %17 = load i32, i32* @PG_REPORT, align 4
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @PQerrorMessage(i32* %18)
  %20 = call i32 @pg_log(i32 %17, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %19)
  %21 = load i32*, i32** %5, align 8
  %22 = icmp ne i32* %21, null
  br i1 %22, label %23, label %26

23:                                               ; preds = %16
  %24 = load i32*, i32** %5, align 8
  %25 = call i32 @PQfinish(i32* %24)
  br label %26

26:                                               ; preds = %23, %16
  %27 = call i8* @_(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %28 = call i32 @printf(i8* %27)
  %29 = call i32 @exit(i32 1) #3
  unreachable

30:                                               ; preds = %11
  %31 = load i32*, i32** %5, align 8
  %32 = load i32, i32* @ALWAYS_SECURE_SEARCH_PATH_SQL, align 4
  %33 = call i32 @executeQueryOrDie(i32* %31, i32 %32)
  %34 = call i32 @PQclear(i32 %33)
  %35 = load i32*, i32** %5, align 8
  ret i32* %35
}

declare dso_local i32* @get_db_conn(i32*, i8*) #1

declare dso_local i64 @PQstatus(i32*) #1

declare dso_local i32 @pg_log(i32, i8*, i32) #1

declare dso_local i32 @PQerrorMessage(i32*) #1

declare dso_local i32 @PQfinish(i32*) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i8* @_(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @PQclear(i32) #1

declare dso_local i32 @executeQueryOrDie(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
